package carmenSandiego.modelo;

public class EstadoSano implements EstadoJugador{

    public void pasarTiempo(Tiempo reloj){}
}
